[CBN-312] fixing wrapping and overflow in filter sidebar

--- a/css/base.css
+++ b/css/base.css
@@ -1,5 +1,5 @@
 img {max-width:100%}
-
+body {overflow-x:hidden}
 body .showResults.item-finder > .HomeHeader{
   padding:.25rem .5rem;
 }
@@ -11,7 +11,8 @@ body .showResults.item-finder > .HomeHeader > .navbar > .nav > .btn-group {posit
 body .showResults.item-finder > .HomeHeader > .navbar > .nav > .SearchBox .ShowFilter {width:18.6% !important; max-width: 10rem !important;}
 body .showResults.item-finder .filters {top:5; padding-top:1rem !important; margin-top:-1px; border-radius:0; box-shadow:-.25rem 0 #fff; border-left:none; border-top:none; left:.25rem}
 body .showResults.item-finder .filters .row {border:none; padding:0}
-body .showResults.item-finder .filters .row > div {font-size:.75rem}
+body .showResults.item-finder .filters .row > div {font-size:.75rem; padding:0 .5rem;  overflow:hidden;}
+body .showResults.item-finder .filters .row > div label {white-space:nowrap;}
 body .showResults.item-finder .filters .Cols3 {column-count:1}
 
 .NoLabels > .Categories label > input {display:none}
